<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/icono"
        android:icon="@drawable/movil"
        android:title="Skin"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/imNuevoJuego"
        android:title="@string/nuevo_juego"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/imInstrucciones"
        android:title="@string/instrucciones"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/imConfiguraJuego"
        android:title="@string/configura_dificultad"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/imSeleccionaSkin"
        android:title="@string/selecciona_skin"
        app:showAsAction="never"
        />
</menu>